src/objects/TopAccounts__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_time__c</fullName>
        <label>Execution time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <label>Running User</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_name__c</fullName>
        <label>Snapshot name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>TopAccounts</label>
    <nameField>
        <label>TopAccounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TopAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>